--- a/weather.html
+++ b/weather.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
-    <link rel="stylesheet" href="weather.css">
+    <link rel="stylesheet" href="wweather.css">
 </head>
 <body>
     <!-- <h1 style="text-align: center; margin-top:l̥ a;">Weather Web APP</h1> -->
